--- a/starters/starters.yml
+++ b/starters/starters.yml
@@ -1,18 +1,19 @@
-- title: Title of your Starter
-  author: John Doe
-  photo: https://via.placeholder.com/300
-  repo: johndoe/awesome-strapi-starter
-  slug: johndoe-awesome-strapi-starter
-  preview: https://johndoe.github.io/awesome-strapi-starter
-  integration: Gatsby
+- title: Strapi Starter React Blog 
+  author: Maxime castres
+  photo: https://github.com/mcastres.png
+  repo: strapi/strapi-starter-react-blog
+  slug: strapi-starter-react-blog
+  preview:
+  integration: React
   use_cases:
     - blog
-  description: Bootstrap a great blog application using Gatsby and Strapi. In this starter, you'll be able to use all the latest features available in Strapi.
+  description: Bootstrap a simple blog application using React, Apollo and Strapi, the most suitable headless CMS for React.
   features:
-    - 1 Single type
-    - 4 Components
-    - "3 Collection types: Article, Category, User"
-    - 6 Created articles
-  youtube: https://www.youtube.com/embed/4g3Pzj-wdXo
+    - 2 Collection types
+    - 2 Created articles
+    - 3 Created categories
+    - Permissions set to `true` for article and category
+    - Responsive design using UIkit
+  youtube:
   how_to_install: Add a short description here, application using Gatsby and Strapi. lorem ipsum dolor sit you'll be able to use all the latest features
-  command: yarn create strapi-starter https://github.com/strapi/strapi-starter-gatsby-blog
+  command: yarn create strapi-starter https://github.com/strapi/strapi-starter-react-blog
